Fixes on Study Browser: - Make the Browse and Search Button text aligned to the rest of direction text. - Change Search Result to Search Results - Make the Close All tabs button appear only  when there is two or more tabs open
GCP-9537

Reviewer: Dennis(Post-Commit)

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -346,3 +346,7 @@ img[src$="document-icon.png"] {
 .no-caption .v-caption {
 	height: 0px;
 }
+
+.study-browser-main .v-button .v-button-caption {
+	font-size: 13px;
+}
